fix: :bug: add ema, change optimizer and fix small bugs

--- a/config/cifar10-4000.yaml
+++ b/config/cifar10-4000.yaml
@@ -13,7 +13,7 @@ arch: wideresnet
 dropout: 0.0
 
 # 训练参数
-num_epochs: 200
+num_epochs: 1200
 batch_size: 64
 learning_rate: 0.03
 weight_decay: 5e-4
@@ -22,8 +22,8 @@ min_learning_rate: 1e-5
 
 
 # EMA设置
-# use_ema: true
-# ema_decay: 0.999
+use_ema: true
+ema_decay: 0.999
 
 # 半监督学习参数
 mu: 7  # 无标签批次大小系数
@@ -32,11 +32,10 @@ temperature: 1  # 伪标签温度
 threshold: 0.95  # 伪标签阈值
 
 # 输出和检查点
-save_model_freq: 100
+save_model_freq: 400
 model_ckpt: null
 optim_ckpt: null
 
 # 其他设置
 seed: 3407 # https://arxiv.org/abs/2109.08203
-local_rank: -1  # 分布式训练
-no_progress: false  # 进度条显示
+
